--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -9,8 +9,12 @@ env:
   IMAGE_NAME: sblob
   IMAGE_TAGS: latest ${{ github.sha }} ${{ github.event.release.tag_name }}
   IMAGE_REGISTRY: ghcr.io/${{ github.repository_owner }}
+  IMAGE_PLATFORMS: linux/amd64, linux/arm64
   REGISTRY_USER: ${{ github.actor }}
   REGISTRY_PASSWORD: ${{ github.token }}
+
+permissions:
+  packages: write
 
 jobs:
   release-ghcr:
@@ -20,12 +24,18 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
+      - name: Install qemu dependency
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y qemu-user-static
+
       - name: Build Image
         id: build-image
         uses: redhat-actions/buildah-build@v2
         with:
           image: ${{ env.IMAGE_NAME }}
           tags: ${{ env.IMAGE_TAGS }}
+          platforms: ${{ env.IMAGE_PLATFORMS }}
           containerfiles: |
             ./Dockerfile
 
