feat: add datadog post

--- a/nginx.conf
+++ b/nginx.conf
@@ -9,7 +9,7 @@ server {
         try_files $uri $uri/ /index.html;
     }
     location ~ \.(css|js|ico|gif|jpe?g|png|svg|webp|woff|woff2|ttf|md|html)$ {
-        expires 1y;
+        expires 1d;
         try_files $uri =404;
     }
 }
